--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <html class="has-navbar-fixed-top">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="has-navbar-fixed-top"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
